task7 in project

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Git Assignment</h1>
-    <p>task 6</p>
+    <p>tThis line in Project1 will cause conflict</p>
+
 </body>
 </html>
